# sqlite-user-management-cli

./: .gitignore  database.db  main.py  pyproject.toml
app/controllers/: app_controller.py
app/database/: connection.py  migrations.py
app/database/seeds/: admin_seed.py
app/domain/: session.py  session_active.py
app/exceptions/: user_exceptions.py
app/repositories/: session_repository.py  user_repository.py
app/services/: session_service.py  user_service.py
app/ui/: cli.py  menus.py  prompts.py
tests/: conftest.py
tests/repositories/: test_session_repository.py  test_user_repository.py
tests/services/: test_session_service.py  test_user_service.py
