[project]
name = "sqlite-user-management-cli"
version = "1.0.0"
description = "User management system built with SQLite"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "prodsimu"}
]

dependencies = [
    "bcrypt==5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "coverage==7.13.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
